--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,27 +1,27 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Canvas Goban</title>
-  <!--[if IE]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-  <script src="./js/goban.js" type="text/javascript"></script>
-  <script type="text/javascript">
-    function init() {
-      var canvas = document.getElementById('goban');
-      var controller = new GOBAN.Controller(new GOBAN.CanvasView(canvas), new GOBAN.Board());
-      GOBAN.Utils.$("previous").onclick = GOBAN.Utils.bind(controller, controller.onPrevious);
-      GOBAN.Utils.$("next").onclick = GOBAN.Utils.bind(controller, controller.onNext);
-      GOBAN.Utils.$("beginning").onclick = GOBAN.Utils.bind(controller, controller.onBeginning);
-      GOBAN.Utils.$("last").onclick = GOBAN.Utils.bind(controller, controller.onLast);
-    }
-  </script>
+  <meta charset="utf-8">
+  <title>Guess the next move !</title>
+  <style>
+  body { text-align: center; }
+  div { margin: 20px auto; color: #888; }
+  </style>
 </head>
-<body onload="init();">
-  <h1>Canvas Goban</h1>
-  <p>A Go board implementation with only HTML5 canvas and Javascript code. I'm not sure whether it works on MSIE or not. Maybe not.</p>
-  <canvas id="goban" width="420" height="420">Your browser is old as fuck! http://browsehappy.com</canvas>
-  <p>Black:<span id="black_prisoner">0</span> White:<span id="white_prisoner">0</span></p>
+<body>
+  <h1>It's <span id="playerturn">black</span>'s turn. Can you guess the next move ?</h1>
+  <div id="board"></div>
+  <form>
+    <input id="form_username" type="text" placeholder="Pseudonym" /><input type="password" placeholder="password" /><input type="submit" value="ok" />
+  </form>
+
+  <script type="text/javascript" src="//cdn.jsdelivr.net/sockjs/1.0.3/sockjs.min.js"></script>
+  <script type="text/javascript" src="js/vendor/stomp.js"></script>
+  <script type="text/javascript" src="js/vendor/jgoboard-latest.js"></script>
+  <script type="text/javascript" src="js/vendor/medium/board.js"></script>
+  <script type="text/javascript" src="js/app/goban-control.js"></script>
+  <script type="text/javascript" src="js/app/api.js"></script>
+  <script type="text/javascript" src="js/app/guess.js"></script>
+
 </body>
 </html>
