Should be kinda working

--- a/src/main/webapp/record.html
+++ b/src/main/webapp/record.html
@@ -8,15 +8,17 @@
   div { margin: 20px auto; color: #888; }
   </style>
 </head>
-<body>
-<input id="password" type="password" placeholder="password" />
-<div id="board"></div>
-<button id="submit_move">Validate move</button>
+  <body>
+  <input id="password" type="password" placeholder="password" />
+  <div id="board"></div>
+  <button id="submit_move">Validate move</button>
 
-<script type="text/javascript" src="js/vendor/jgoboard-latest.js"></script>
-<script type="text/javascript" src="js/vendor/medium/board.js"></script>
-<script type="text/javascript" src="js/app/api.js"></script>
-<script type="text/javascript" src="js/app/record.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/sockjs/1.0.3/sockjs.min.js"></script>
+  <script type="text/javascript" src="js/vendor/stomp.js"></script>
+  <script type="text/javascript" src="js/vendor/jgoboard-latest.js"></script>
+  <script type="text/javascript" src="js/vendor/medium/board.js"></script>
+  <script type="text/javascript" src="js/app/api.js"></script>
+  <script type="text/javascript" src="js/app/record.js"></script>
 
 </body>
 </html>
