--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,16 +4,37 @@
   <meta charset="utf-8">
   <title>Guess the next move !</title>
   <style>
-  body { text-align: center; }
-  div { margin: 20px auto; color: #888; }
+  #board-container { text-align: center; width: 48%; float: left; }
+  #board { margin: 20px auto; color: #888; }
+  #board-container ul { text-align: left; margin: auto; width: 600px }
+  #users-container { width: 48%; float: right; padding-left: 10px;}
   </style>
 </head>
 <body>
-  <h1>It's <span id="playerturn">black</span>'s turn. Can you guess the next move ?</h1>
-  <div id="board"></div>
-  <form>
-    <input id="form_username" type="text" placeholder="Pseudonym" /><input type="password" placeholder="password" /><input type="submit" value="ok" />
-  </form>
+  <div id="board-container">
+    <h1>It's <span class="playerturn">black</span>'s turn. Can you guess the next move ?</h1>
+    <ul>
+      <li>Click on the board where you think <span class="playerturn">black</span> will play.</li>
+      <li>You can change your guess at any time before the move is actually played. Don't cheat...</li>
+      <li>The less people to agree with you, the more points you win if you're right!</li>
+    </ul>
+    <div id="board"></div>
+    <form>
+      <input id="form_username" type="text" placeholder="Pseudonym" /><input id="form_password" type="password" placeholder="password" />
+    </form>
+  </div>
+  <div id="users-container">
+
+    <h2>Guesses for next move</h2>
+    <ul id="guesses">
+
+    </ul>
+
+    <h2>Scores</h2>
+    <ul id="players">
+
+    </ul>
+  </div>
 
   <script type="text/javascript" src="//cdn.jsdelivr.net/sockjs/1.0.3/sockjs.min.js"></script>
   <script type="text/javascript" src="js/vendor/stomp.js"></script>
