Added possibility to load a sgf and to reload the record page without losing moves

--- a/src/main/webapp/record.html
+++ b/src/main/webapp/record.html
@@ -11,7 +11,8 @@
   <body>
   <input id="password" type="password" placeholder="password" />
   <div id="board"></div>
-  <button id="submit_move">Validate move</button>
+  <div><button id="submit_move">Validate move</button></div>
+  <div><input type="file" id="sgf_file"> <button id="submit_sgf">Load SGF</button></div>
 
   <script type="text/javascript" src="//cdn.jsdelivr.net/sockjs/1.0.3/sockjs.min.js"></script>
   <script type="text/javascript" src="js/vendor/stomp.js"></script>
