Started implementing the app with redux

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,13 +13,13 @@
 <body>
   <div id="app"></div>
 
-  <script type="text/javascript" src="app/gomoveguesser.dist.js"></script>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/sockjs/1.0.3/sockjs.min.js"></script>
-  <script type="text/javascript" src="js/vendor/stomp.js"></script>
   <script type="text/javascript" src="js/vendor/jgoboard-latest.js"></script>
   <script type="text/javascript" src="js/vendor/medium/board.js"></script>
+  <script type="text/javascript" src="app/gomoveguesser.dist.js"></script>
+  <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/sockjs/1.0.3/sockjs.min.js"></script>
+  <script type="text/javascript" src="js/vendor/stomp.js"></script>
   <script type="text/javascript" src="js/app/api.js"></script>
-  <script type="text/javascript" src="js/app/guess.js"></script>
+  <script type="text/javascript" src="js/app/guess.js"></script> -->
 
 </body>
 </html>
